feat: change devcontainer

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,28 @@
 **/.idea
 **/.ionide
 .pulumi
+Pulumi.*.yaml
 yarn.lock
 ci-scripts
 /nuget/
-.vscode
-pulumi-pve.code-workspace
-.vscode/settings.json
-settings.json
-go.mod
-go.sum
-provider/cmd/pulumi-resource-pve/__debug_*
+sdk/dotnet/version.txt
+.DS_Store
+/provider/cmd/pulumi-resource-command/schema-embed.json
 dist/
+.vscode
+.gradle
+**/.yarn
+
+rsa*
+examples/**/venv/
+examples/**/__pycache__/
+
+sdk/java/build
+sdk/java/.gradle
+sdk/java/gradle
+sdk/java/gradlew
+sdk/java/gradlew.bat
+
+sdk/python/venv
+
+coverage.txt
