--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,8 @@ env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   # NUGET_PUBLISH_KEY: ${{ secrets.NUGET_PUBLISH_KEY }}
-  #PYPI_USERNAME: __token__
-  #PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+  PYPI_USERNAME: __token__
+  PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
   TRAVIS_OS_NAME: linux
   PULUMI_GO_DEP_ROOT: ${{ github.workspace }}/..
   # PUBLISH_REPO_USERNAME: ${{ secrets.OSSRH_USERNAME }}
@@ -43,7 +43,6 @@ env:
   # SIGNING_KEY_ID: ${{ secrets.JAVA_SIGNING_KEY_ID }}
   # SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
   # SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
-  NO_TFGEN_PYTHON_PACKAGE: true
 jobs:
   prerequisites:
     runs-on: ubuntu-latest
