--- a/sdk/java/build.gradle
+++ b/sdk/java/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id("io.github.gradle-nexus.publish-plugin") version "2.0.0"
 }
 
-group = "com.hctamu."
+group = "com.pulumi"
 
 def resolvedVersion = System.getenv("PACKAGE_VERSION") ?:
     (project.version == "unspecified"
@@ -83,7 +83,7 @@ jar.configure {
 publishing {
     publications {
         mainPublication(MavenPublication) {
-            groupId = "com.hctamu."
+            groupId = "com.pulumi"
             artifactId = "pve"
             version = resolvedVersion
             from components.java
