--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ env:
   # PULUMI_LOCAL_NUGET: ${{ github.workspace }}/nuget
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-  # NUGET_PUBLISH_KEY: ${{ secrets.NUGET_PUBLISH_KEY }}
+  NUGET_PUBLISH_KEY: ${{ secrets.NUGET_PUBLISH_KEY }}
   PYPI_USERNAME: __token__
   PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
   TRAVIS_OS_NAME: linux
@@ -35,8 +35,7 @@ env:
   # SIGNING_KEY_ID: ${{ secrets.JAVA_SIGNING_KEY_ID }}
   # SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
   # SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
-  IS_PRERELEASE: true
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  IS_PRERELEASE: false
 jobs:
   prerequisites:
     runs-on: ubuntu-latest
@@ -288,6 +287,9 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         PYPI_PUBLISH_ARTIFACTS: all
+    - name: Publish NuGet Packages
+      run: |
+        find "${{ github.workspace }}/sdk/dotnet/bin/Debug/" -name 'Hctamu.*.nupkg' -exec dotnet nuget push -k "${NUGET_PUBLISH_KEY}" -s https://api.nuget.org/v3/index.json {} ';'
   # publish_java_sdk:
   #   runs-on: ubuntu-latest
   #   continue-on-error: true
