--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,7 +24,7 @@ env:
   # PULUMI_LOCAL_NUGET: ${{ github.workspace }}/nuget
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-  # NUGET_PUBLISH_KEY: ${{ secrets.NUGET_PUBLISH_KEY }}
+  NUGET_PUBLISH_KEY: ${{ secrets.NUGET_PUBLISH_KEY }}
   PYPI_USERNAME: __token__
   PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
   TRAVIS_OS_NAME: linux
@@ -35,6 +35,7 @@ env:
   # SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
   # SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
   IS_PRERELEASE: true
+  PYPI_PUBLISH_ARTIFACTS: all
 jobs:
   prerequisites:
     runs-on: ubuntu-latest
@@ -283,6 +284,9 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         PYPI_PUBLISH_ARTIFACTS: all
+        NUGET_PUBLISH_KEY: ${{ secrets.NUGET_PUBLISH_KEY }}
+    - name: test_nuget
+      run: find "${SOURCE_ROOT}/sdk/dotnet/bin/Debug/" -name 'Pulumi.*.nupkg' -exec dotnet nuget push -k "${NUGET_PUBLISH_KEY}" -s https://api.nuget.org/v3/index.json {} ;
   # publish_java_sdk:
   #   runs-on: ubuntu-latest
   #   continue-on-error: true
