--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -13,15 +13,9 @@ env:
   DOTNETVERSION: "9.0.x"
   JAVAVERSION: "11"
   PR_COMMIT_SHA: ${{ github.event.client_payload.pull_request.head.sha }}
-  # AZURE_SIGNING_CLIENT_ID: ${{ secrets.AZURE_SIGNING_CLIENT_ID }}
-  # AZURE_SIGNING_CLIENT_SECRET: ${{ secrets.AZURE_SIGNING_CLIENT_SECRET }}
-  # AZURE_SIGNING_TENANT_ID: ${{ secrets.AZURE_SIGNING_TENANT_ID }}
-  # AZURE_SIGNING_KEY_VAULT_URI: ${{ secrets.AZURE_SIGNING_KEY_VAULT_URI }}
   SKIP_SIGNING: ${{ secrets.AZURE_SIGNING_CLIENT_ID == '' &&
     secrets.AZURE_SIGNING_CLIENT_SECRET == '' && secrets.AZURE_SIGNING_TENANT_ID
     == '' && secrets.AZURE_SIGNING_KEY_VAULT_URI == '' }}
-  # PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-  # PULUMI_LOCAL_NUGET: ${{ github.workspace }}/nuget
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   NUGET_PUBLISH_KEY: ${{ secrets.NUGET_PUBLISH_KEY }}
@@ -29,11 +23,6 @@ env:
   PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
   TRAVIS_OS_NAME: linux
   PULUMI_GO_DEP_ROOT: ${{ github.workspace }}/..
-  # PUBLISH_REPO_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-  # PUBLISH_REPO_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-  # SIGNING_KEY_ID: ${{ secrets.JAVA_SIGNING_KEY_ID }}
-  # SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
-  # SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
   IS_PRERELEASE: true
 jobs:
   prerequisites:
@@ -222,12 +211,6 @@ jobs:
       uses: pulumi/provider-version-action@f96d032a2758fdda7939e5728eff6c0d980ae894 # v1.6.0
       with:
         set-env: PROVIDER_VERSION
-    - name: Checkout Scripts Repo
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      with:
-        path: ci-scripts
-        repository: pulumi/scripts
-    - run: echo "ci-scripts" >> .git/info/exclude
     - name: Install Go
       uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
       with:
@@ -252,92 +235,22 @@ jobs:
       uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
       with:
         python-version: ${{ env.PYTHONVERSION }}
-    - name: Download python SDK
-      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+    - name: Setup Java
+      uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
       with:
-        name: python-sdk.tar.gz
-        path: ${{ github.workspace}}/sdk/
-    - name: Uncompress python SDK
-      run: tar -zxf ${{github.workspace}}/sdk/python.tar.gz -C
-        ${{github.workspace}}/sdk/python
-    - name: Download dotnet SDK
-      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+        java-version: ${{ env.JAVAVERSION }}
+        distribution: temurin
+        cache: gradle
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4.4.0
       with:
-        name: dotnet-sdk.tar.gz
-        path: ${{ github.workspace}}/sdk/
-    - name: Uncompress dotnet SDK
-      run: tar -zxf ${{github.workspace}}/sdk/dotnet.tar.gz -C
-        ${{github.workspace}}/sdk/dotnet
-    - name: Download nodejs SDK
-      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-      with:
-        name: nodejs-sdk.tar.gz
-        path: ${{ github.workspace}}/sdk/
-    - name: Uncompress nodejs SDK
-      run: tar -zxf ${{github.workspace}}/sdk/nodejs.tar.gz -C
-        ${{github.workspace}}/sdk/nodejs
-    - name: Install Twine
-      run: python -m pip install twine==5.0.0
+        gradle-version: "7.6"
     - name: Publish SDKs
-      run: ./ci-scripts/ci/publish-tfgen-package ${{ github.workspace }}
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        PYPI_PUBLISH_ARTIFACTS: all
-    - name: Publish NuGet Packages
-      run: |
-        find "${{ github.workspace }}/sdk/dotnet/bin/Debug/" -name 'Hctamu.*.nupkg' -exec dotnet nuget push -k "${NUGET_PUBLISH_KEY}" -s https://api.nuget.org/v3/index.json {} ';'
-  # publish_java_sdk:
-  #   runs-on: ubuntu-latest
-  #   continue-on-error: true
-  #   needs: publish
-  #   name: publish_java_sdk
-  #   steps:
-  #   - name: Checkout Repo
-  #     uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-  #     with:
-  #       lfs: true
-  #   - id: version
-  #     name: Set Provider Version
-  #     uses: pulumi/provider-version-action@f96d032a2758fdda7939e5728eff6c0d980ae894 # v1.6.0
-  #     with:
-  #       set-env: PROVIDER_VERSION
-  #   - name: Install Go
-  #     uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
-  #     with:
-  #       go-version: ${{ env.GOVERSION }}
-  #       cache-dependency-path: "**/*.sum"
-  #   - name: Install pulumictl
-  #     uses: jaxxstorm/action-install-gh-release@6096f2a2bbfee498ced520b6922ac2c06e990ed2 # v2.1.0
-  #     with:
-  #       repo: pulumi/pulumictl
-  #   - name: Install Pulumi CLI
-  #     uses: pulumi/actions@df5a93ad715135263c732ba288301bd044c383c0 # v6.3.0
-  #   - name: Setup Java
-  #     uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
-  #     with:
-  #       java-version: ${{ env.JAVAVERSION }}
-  #       distribution: temurin
-  #       cache: gradle
-  #   - name: Setup Gradle
-  #     uses: gradle/actions/setup-gradle@v4.4.0
-  #     with:
-  #       gradle-version: "7.6"
-  #   - name: Download java SDK
-  #     uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-  #     with:
-  #       name: java-sdk.tar.gz
-  #       path: ${{ github.workspace}}/sdk/
-  #   - name: Uncompress java SDK
-  #     run: tar -zxf ${{github.workspace}}/sdk/java.tar.gz -C
-  #       ${{github.workspace}}/sdk/java
-  #   - name: Publish Java SDK
-  #     uses: gradle/gradle-build-action@ac2d340dc04d9e1113182899e983b5400c17cda1 # v3.5.0
-  #     env:
-  #       PACKAGE_VERSION: ${{ env.PROVIDER_VERSION }}
-  #     with:
-  #       arguments: publishToSonatype closeAndReleaseSonatypeStagingRepository
-  #       build-root-directory: ./sdk/java
-  #       gradle-version: 7.4.1
+      uses: pulumi/pulumi-package-publisher@v0.0.22
+      with:
+        sdk: all,!java
+        assertPrerelease: true
+        version: ${{ steps.version.outputs.version }}
   publish_go_sdk:
     runs-on: ubuntu-latest
     name: publish-go-sdk
