--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -209,13 +209,14 @@ jobs:
       uses: goreleaser/goreleaser-action@5742e2a039330cbb23ebf35f046f814d4c6ff811 # v5.1.0
       env:
         GORELEASER_CURRENT_TAG: v${{ steps.version.outputs.version }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         args: -p 3 release --clean --timeout 60m0s
         version: '~> v2'
   publish_sdk:
     runs-on: ubuntu-latest
     needs: publish
-    name: publish_sdks
+    name: publish_sdk
     steps:
     - name: Checkout Repo
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -226,12 +227,6 @@ jobs:
       uses: pulumi/provider-version-action@f96d032a2758fdda7939e5728eff6c0d980ae894 # v1.6.0
       with:
         set-env: PROVIDER_VERSION
-    - name: Checkout Scripts Repo
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      with:
-        path: ci-scripts
-        repository: pulumi/scripts
-    - run: echo "ci-scripts" >> .git/info/exclude
     - name: Install Go
       uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
       with:
@@ -256,92 +251,21 @@ jobs:
       uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
       with:
         python-version: ${{ env.PYTHONVERSION }}
-    - name: Download python SDK
-      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+    - name: Setup Java
+      uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
       with:
-        name: python-sdk.tar.gz
-        path: ${{ github.workspace}}/sdk/
-    - name: Uncompress python SDK
-      run: tar -zxf ${{github.workspace}}/sdk/python.tar.gz -C
-        ${{github.workspace}}/sdk/python
-    - name: Download dotnet SDK
-      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+        java-version: ${{ env.JAVAVERSION }}
+        distribution: temurin
+        cache: gradle
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4.4.0
       with:
-        name: dotnet-sdk.tar.gz
-        path: ${{ github.workspace}}/sdk/
-    - name: Uncompress dotnet SDK
-      run: tar -zxf ${{github.workspace}}/sdk/dotnet.tar.gz -C
-        ${{github.workspace}}/sdk/dotnet
-    - name: Download nodejs SDK
-      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-      with:
-        name: nodejs-sdk.tar.gz
-        path: ${{ github.workspace}}/sdk/
-    - name: Uncompress nodejs SDK
-      run: tar -zxf ${{github.workspace}}/sdk/nodejs.tar.gz -C
-        ${{github.workspace}}/sdk/nodejs
-    - name: Install Twine
-      run: python -m pip install twine==5.0.0
+        gradle-version: "7.6"
     - name: Publish SDKs
-      run: ./ci-scripts/ci/publish-tfgen-package ${{ github.workspace }}
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        PYPI_PUBLISH_ARTIFACTS: all
-    - name: Publish NuGet Packages
-      run: |
-        find "${{ github.workspace }}/sdk/dotnet/bin/Debug/" -name 'Hctamu.*.nupkg' -exec dotnet nuget push -k "${NUGET_PUBLISH_KEY}" -s https://api.nuget.org/v3/index.json {} ';'
-  # publish_java_sdk:
-  #   runs-on: ubuntu-latest
-  #   continue-on-error: true
-  #   needs: publish
-  #   name: publish_java_sdk
-  #   steps:
-  #   - name: Checkout Repo
-  #     uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-  #     with:
-  #       lfs: true
-  #   - id: version
-  #     name: Set Provider Version
-  #     uses: pulumi/provider-version-action@f96d032a2758fdda7939e5728eff6c0d980ae894 # v1.6.0
-  #     with:
-  #       set-env: PROVIDER_VERSION
-  #   - name: Install Go
-  #     uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
-  #     with:
-  #       go-version: ${{ env.GOVERSION }}
-  #       cache-dependency-path: "**/*.sum"
-  #   - name: Install pulumictl
-  #     uses: jaxxstorm/action-install-gh-release@6096f2a2bbfee498ced520b6922ac2c06e990ed2 # v2.1.0
-  #     with:
-  #       repo: pulumi/pulumictl
-  #   - name: Install Pulumi CLI
-  #     uses: pulumi/actions@df5a93ad715135263c732ba288301bd044c383c0 # v6.3.0
-  #   - name: Setup Java
-  #     uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
-  #     with:
-  #       java-version: ${{ env.JAVAVERSION }}
-  #       distribution: temurin
-  #       cache: gradle
-  #   - name: Setup Gradle
-  #     uses: gradle/actions/setup-gradle@v4.4.0
-  #     with:
-  #       gradle-version: "7.6"
-  #   - name: Download java SDK
-  #     uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-  #     with:
-  #       name: java-sdk.tar.gz
-  #       path: ${{ github.workspace}}/sdk/
-  #   - name: Uncompress java SDK
-  #     run: tar -zxf ${{github.workspace}}/sdk/java.tar.gz -C
-  #       ${{github.workspace}}/sdk/java
-  #   - name: Publish Java SDK
-  #     uses: gradle/actions/setup-gradle@v4.4.0
-  #     env:
-  #       PACKAGE_VERSION: ${{ env.PROVIDER_VERSION }}
-  #     with:
-  #       arguments: publishToSonatype closeAndReleaseSonatypeStagingRepository
-  #       build-root-directory: ./sdk/java
-  #       gradle-version: 7.4.1
+      uses: pulumi/pulumi-package-publisher@v0.0.22
+      with:
+        sdk: all,!java
+        version: ${{ steps.version.outputs.version }}
   publish_go_sdk:
     runs-on: ubuntu-latest
     name: publish-go-sdk
