--- a/.ci-mgmt.yaml
+++ b/.ci-mgmt.yaml
@@ -7,4 +7,4 @@ pulumiVersionFile: .pulumi.version
 parallel: 3
 # For some reason this is required. If it's omitted all of the env keys get duplicated.
 envOverride:
-  FOO: BAR
+  FOO: BARdasdassd
