--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,7 +16,7 @@ linters:
     - govet
     - importas
     - ineffassign
-    - lll
+    - lllasd
     - misspell
     - nakedret
     - nolintlint
