--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Existing Dockerfile",
+	"name": "Pulumi dev",
 	"build": {
 		// Sets the run context to one level up instead of the .devcontainer folder.
 		"context": "..",
@@ -10,7 +10,7 @@
 	},
 	"mounts": [],
 	// For this to work the user needs to have a valid SSH key in their home directory called id_ed25519.pub
-	"postStartCommand": "git config --global gpg.format ssh; git config --global user.signingkey /root/.ssh/id_ed25519.pub",
+	"postStartCommand": "git config --global gpg.format ssh; git config --global user.signingkey /root/.ssh/id_ed25519.pub; git config --global commit.gpgsign true",
 	"runArgs": [
 		"--name", "pulumi-pve",
 		"-v", "${localEnv:HOME}/.ssh/id_ed25519.pub:/root/.ssh/id_ed25519.pub:Z"
