--- a/sdk/dotnet/Hctamu.Pve.csproj
+++ b/sdk/dotnet/Hctamu.Pve.csproj
@@ -5,7 +5,7 @@
     <Authors>Pulumi Corp.</Authors>
     <Company>Pulumi Corp.</Company>
     <Description>PVE Provider</Description>
-    <PackageLicenseExpression></PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl>https://github.com/hctamu/pulumi-pve</RepositoryUrl>
     <PackageIcon>logo.png</PackageIcon>
