--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -2,6 +2,7 @@
     "name": "@hctamu/pulumi-pve",
     "version": "1.0.0-alpha.0+dev",
     "repository": "https://github.com/hctamu/pulumi-pve",
+    "license": "Apache-2.0",
     "scripts": {
         "build": "tsc"
     },
@@ -16,6 +17,5 @@
         "resource": true,
         "name": "pve",
         "version": "1.0.0-alpha.0+dev"
-    },
-    "packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
+    }
 }
