--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -8,7 +8,7 @@ on:
 env:
   PROVIDER: pve
   GOVERSION: "1.24.x"
-  GOLANGCI_LINT_VERSION : "2.3.0"
+  GOLANGCI_LINT_VERSION : "v2.3.0"
   NODEVERSION: "22.x"
   PYTHONVERSION: "3.12.9"
   DOTNETVERSION: "9.0.x"
