--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,11 +39,10 @@ env:
   PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
   TRAVIS_OS_NAME: linux
   PULUMI_GO_DEP_ROOT: ${{ github.workspace }}/..
-  # PUBLISH_REPO_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-  # PUBLISH_REPO_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-  # SIGNING_KEY_ID: ${{ secrets.JAVA_SIGNING_KEY_ID }}
-  # SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
-  # SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
+  PUBLISH_REPO_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+  PUBLISH_REPO_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+  SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
+  SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
 jobs:
   prerequisites:
     runs-on: ubuntu-latest
@@ -261,7 +260,7 @@ jobs:
     - name: Publish SDKs
       uses: pulumi/pulumi-package-publisher@v0.0.22
       with:
-        sdk: all,!java
+        sdk: all
         assertPrerelease: true
         version: ${{ steps.version.outputs.version }}
   lint:
