--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,11 +31,10 @@ env:
   PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
   TRAVIS_OS_NAME: linux
   PULUMI_GO_DEP_ROOT: ${{ github.workspace }}/..
-  # PUBLISH_REPO_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-  # PUBLISH_REPO_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-  # SIGNING_KEY_ID: ${{ secrets.JAVA_SIGNING_KEY_ID }}
-  # SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
-  # SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
+  PUBLISH_REPO_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+  PUBLISH_REPO_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+  SIGNING_KEY: ${{ secrets.JAVA_SIGNING_KEY }}
+  SIGNING_PASSWORD: ${{ secrets.JAVA_SIGNING_PASSWORD }}
   IS_PRERELEASE: false
 jobs:
   prerequisites:
@@ -265,7 +264,7 @@ jobs:
     - name: Publish SDKs
       uses: pulumi/pulumi-package-publisher@v0.0.22
       with:
-        sdk: all,!java
+        sdk: all
         version: ${{ steps.version.outputs.version }}
   publish_go_sdk:
     runs-on: ubuntu-latest
