--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -264,7 +264,7 @@ jobs:
     - name: Publish SDKs
       uses: pulumi/pulumi-package-publisher@v0.0.22
       with:
-        sdk: all
+        sdk: all, !java
         version: ${{ steps.version.outputs.version }}
   publish_go_sdk:
     runs-on: ubuntu-latest
