--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -260,7 +260,7 @@ jobs:
     - name: Publish SDKs
       uses: pulumi/pulumi-package-publisher@v0.0.22
       with:
-        sdk: all
+        sdk: all, !java
         assertPrerelease: true
         version: ${{ steps.version.outputs.version }}
   lint:
