--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -163,6 +163,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_sdks
     name: publish
+    permissions:
+      packages: write
+      contents: write
     steps:
     - name: Checkout Repo
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -199,6 +202,7 @@ jobs:
       uses: goreleaser/goreleaser-action@5742e2a039330cbb23ebf35f046f814d4c6ff811 # v5.1.0
       env:
         GORELEASER_CURRENT_TAG: v${{ steps.version.outputs.version }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         args: -p 3 -f .goreleaser.prerelease.yml --clean --skip=validate --timeout 60m0s
         version: '~> v2'
