test: extend ha tests
Signed-off-by: Tamas Janosi <janosi96@gmail.com>

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -13,14 +13,20 @@
         "strict": true
     },
     "files": [
+        "acl/acl.ts",
+        "acl/index.ts",
         "config/index.ts",
         "config/vars.ts",
+        "group/group.ts",
+        "group/index.ts",
         "ha/ha.ts",
         "ha/index.ts",
         "index.ts",
         "pool/index.ts",
         "pool/pool.ts",
         "provider.ts",
+        "role/index.ts",
+        "role/role.ts",
         "storage/file.ts",
         "storage/index.ts",
         "types/index.ts",
