--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -14,15 +14,19 @@ resources:
       sourceRaw:
         fileData: |
           hello world
-        fileName: testfile01.yaml
+        fileName: testfile011.yaml
 
   myVM:
     type: pve:vm:VM
     properties:
-      name: "testVM"
+      vmId: 129
+      name: "testVMTamas"
       description: "test VM"
       cpu: "EPYC-v3"
       memory: 32768
+      efidisk:
+        storage: "ceph-ha"
+        efitype: "4m"
       disks:
         - storage: "ceph-ha"
           size: 20
@@ -31,7 +35,7 @@ resources:
           size: 17
           interface: "scsi1"
         - storage: "ceph-ha"
-          size: 20
+          size: 21
           interface: "sata0"
       clone:
         vmId: 102
