feat: add PreEnrolledKeys support to EfiDisk configuration and update related logic
Signed-off-by: Tamas Janosi <janosi96@gmail.com>

--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -27,6 +27,7 @@ resources:
       efidisk:
         storage: "ceph-ha"
         efitype: "4m"
+        preEnrolledKeys: false
       disks:
         - storage: "ceph-ha"
           size: 20
