feat(vm): enhance EFI disk handling with granular diffs and preserve FileID during updates
Signed-off-by: Tamas Janosi <janosi96@gmail.com>

--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -20,7 +20,7 @@ resources:
     type: pve:vm:VM
     properties:
       vmId: 129
-      name: "testVMTamas"
+      name: "MyTestVM"
       description: "test VM"
       cpu: "EPYC-v3"
       memory: 32768
