--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -32,6 +32,18 @@ resources:
         physBits: "48"
         cores: 4
         sockets: 2
+        limit: 3.0
+        units: 2048
+        vcpus: 3
+        numa: true
+        numaNodes:
+          - cpus: "0-1"
+            hostNodes: "0"
+            memory: 2048
+            policy: "preferred"
+          - cpus: "2-3"
+            hostNodes: "1"
+            policy: "interleave"
       memory: 27875
       disks:
         - storage: "ceph-ha"
