Implement efi disk (#61)
* feat: Add EFI disk support to VM resource

- Introduced EfiDisk and EfiDiskArgs classes across Java, Python, Node.js, and .NET SDKs.
- Updated VM and VMArgs classes to include efidisk property, replacing the previous efidisk0.
- Modified input and output handling for EFI disk configurations in all relevant SDKs.
- Implemented comprehensive tests for EFI disk changes in the VM resource.

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* test: add comprehensive tests for EfiDisk changes and FileID scenarios

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* feat: add PreEnrolledKeys support to EfiDisk configuration and update related logic

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* feat(vm): enhance EFI disk handling with granular diffs and preserve FileID during updates

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* test: remove duplicated test

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* chore: generate code

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* feat(vm): refactor EFI disk unlinking logic and enhance related tests

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* chore: fix linter finding

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* test: add efi disk create test cases and remove unnecessary repeats

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* fix: fix code after rebase

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* chore: generate after rebase

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* chore: restructure after rebase

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

* feat: make pointer utils function generic

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

---------

Signed-off-by: Tamas Janosi <janosi96@gmail.com>

--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -14,15 +14,20 @@ resources:
       sourceRaw:
         fileData: |
           hello world
-        fileName: testfile01.yaml
+        fileName: testfile011.yaml
 
   myVM:
     type: pve:vm:VM
     properties:
-      name: "testVM"
+      vmId: 129
+      name: "MyTestVM"
       description: "test VM"
       cpu: "EPYC-v3"
       memory: 32768
+      efidisk:
+        storage: "ceph-ha"
+        efitype: "4m"
+        preEnrolledKeys: false
       disks:
         - storage: "ceph-ha"
           size: 20
@@ -31,7 +36,7 @@ resources:
           size: 17
           interface: "scsi1"
         - storage: "ceph-ha"
-          size: 20
+          size: 21
           interface: "sata0"
       clone:
         vmId: 102
