chore: add claude related stuff
Signed-off-by: Tamas Janosi <janosi96@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,7 +31,8 @@
 					"ms-azuretools.vscode-docker",
 					"github.vscode-github-actions",
 					"pulumi.pulumi-vscode-tools",
-          "emeraldwalk.runonsave"
+          "emeraldwalk.runonsave",
+          "anthropic.claude-code"
 				],
         "settings": {
           "emeraldwalk.runonsave": {
